<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.viewnext.gestionformacion</groupId>
  <artifactId>gestionformacion</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <parent>
	<groupId>org.springframework.boot</groupId>
	<artifactId>spring-boot-starter-parent</artifactId>
	<version>3.4.3</version>
	<relativePath/> <!-- lookup parent from repository -->
  </parent>
  <packaging>pom</packaging>
  <modules>
  	<module>login-module</module>
  	<module>register-module</module>
  	<module>course-module</module>
  	<module>core-module</module>
  	<module>usuario-module</module>
  	<module>rol-module</module>
  	<module>convocatoria-module</module>
  	<module>main-module</module>
  </modules>
  <properties>
		<java.version>17</java.version>
  </properties>
	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-devtools</artifactId>
			<scope>runtime</scope>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		
		<!-- MYSQL -->
		
		
		
		<!-- LOMBOOK -->
		
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<scope>provided</scope>
		</dependency>
		
		<!-- SECURITY -->
		
		<dependency>
    		<groupId>io.jsonwebtoken</groupId>
    		<artifactId>jjwt-api</artifactId>
    		<version>0.11.5</version>
		</dependency>
		
		<dependency>
    		<groupId>io.jsonwebtoken</groupId>
    		<artifactId>jjwt-impl</artifactId>
    		<version>0.11.5</version>
    		<scope>runtime</scope>
		</dependency>

		<dependency>
    		<groupId>io.jsonwebtoken</groupId>
    		<artifactId>jjwt-jackson</artifactId>
    		<version>0.11.5</version>
    		<scope>runtime</scope>
		</dependency>
		
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-security</artifactId>
		</dependency>
		
		<dependency>
		    <groupId>org.springframework.security</groupId>
		    <artifactId>spring-security-oauth2-jose</artifactId>
		</dependency>
		
		<dependency>
		    <groupId>com.warrenstrange</groupId>
		    <artifactId>googleauth</artifactId>
		    <version>1.4.0</version>
		</dependency>

	</dependencies>

	<build>
	    <plugins>
	        <plugin>
	            <groupId>org.apache.maven.plugins</groupId>
	            <artifactId>maven-compiler-plugin</artifactId>
	            <configuration>
	                <source>17</source>
	                <target>17</target>
	                <compilerId>javac</compilerId>
	                <forceJavacCompilerUse>true</forceJavacCompilerUse>
	                <annotationProcessorPaths>
	                    <path>
	                        <groupId>org.projectlombok</groupId>
	                        <artifactId>lombok</artifactId>
	                    </path>
	                </annotationProcessorPaths>
	            </configuration>
	        </plugin>
	        <plugin>
	            <groupId>org.sonarsource.scanner.maven</groupId>
	            <artifactId>sonar-maven-plugin</artifactId>
	            <version>3.9.1.2184</version>
	        </plugin>
	        <plugin>
	            <groupId>org.jacoco</groupId>
	            <artifactId>jacoco-maven-plugin</artifactId>
	            <version>0.8.7</version>
	            <executions>
	                <execution>
	                    <goals>
	                        <goal>prepare-agent</goal>
	                    </goals>
	                </execution>
	                <execution>
	                    <id>report</id>
	                    <phase>test</phase>
	                    <goals>
	                        <goal>report</goal>
	                    </goals>
	                </execution>
	            </executions>
	            <configuration>
	                <append>true</append>
	            </configuration>
	        </plugin>
	        <plugin>
	            <groupId>org.apache.maven.plugins</groupId>
	            <artifactId>maven-surefire-plugin</artifactId>
	            <configuration>
	                <argLine>
	                    --add-modules java.instrument
	                    --add-opens java.base/java.lang=ALL-UNNAMED
	                    --add-opens java.base/java.util=ALL-UNNAMED
	                </argLine>
	            </configuration>
	        </plugin>
	    </plugins>
	</build>

</project>